# HH-Career-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/tunnel/: Dockerfile  entrypoint.sh
scripts/: run-tunnel.ps1  setup-tunnel.ps1
src/hh_career_mcp/: __init__.py  auth_cli.py  config.py  hh_client.py  models.py  oauth.py  server.py
tests/: test_hh_client.py  test_oauth.py
