[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "hh-career-mcp"
version = "0.2.0"
description = "API-first MCP server for HH.ru career workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "boltholds" }]
dependencies = [
  "httpx>=0.28,<1",
  "mcp[cli]>=1.27,<2",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
]

[project.scripts]
hh-career-mcp = "hh_career_mcp.server:main"
hh-career-auth = "hh_career_mcp.auth_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hh_career_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["hh_career_mcp"]
